# libcaer_vendor-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  libcaer_vendor-extras.cmake  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
patches/: 0001.patch
rpm/: ros-humble-libcaer-vendor.spec  ros-jazzy-libcaer-vendor.spec  ros-kilted-libcaer-vendor.spec  ros-lyrical-libcaer-vendor.spec  ros-rolling-libcaer-vendor.spec  template.spec
